# src/main/java/by/petrovich/taskwizard/exception/ErrorType.java
@@ -5,9 +5,9 @@ import org.springframework.http.HttpStatus;
 
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
 import static org.springframework.http.HttpStatus.CONFLICT;
-import static org.springframework.http.HttpStatus.FORBIDDEN;
 import static org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
+import static org.springframework.http.HttpStatus.FORBIDDEN;
 
 /**
  * Enum representing predefined error types for standardized error responses in the application.
@@ -36,21 +36,22 @@ import static org.springframework.http.HttpStatus.NOT_FOUND;
 
 @Getter
 public enum ErrorType {
+    ASSIGNEE_NOT_FOUND("The task does not have an assigned user.", NOT_FOUND),
+    BAD_CREDENTIALS("Authentication failed. Please check your credentials.", HttpStatus.UNAUTHORIZED),
+    DATA_INTEGRITY_VIOLATION("%s with the same unique property already exists.", CONFLICT),
     DEFAULT("An internal error occurred. Please try again later.", INTERNAL_SERVER_ERROR),
     ENTITY_NOT_FOUND("The requested %s was not found.", NOT_FOUND),
     ENTITY_NOT_FOUND_ON_UPDATE("The %s to update was not found.", NOT_FOUND),
-    DATA_INTEGRITY_VIOLATION("%s with the same unique property already exists.", CONFLICT),
     ENTITY_ALREADY_EXISTS("The entity %s already exists.", CONFLICT),
     ENTITY_CREATION_FAILED("Failed to create %s.", INTERNAL_SERVER_ERROR),
     ENTITY_UPDATE_FAILED("Failed to update %s.", INTERNAL_SERVER_ERROR),
     ENTITY_DELETION_FAILED("Failed to delete %s.", INTERNAL_SERVER_ERROR),
     ENTITY_DELETION_FORBIDDEN("Deletion of %s is forbidden.", FORBIDDEN),
-    ASSIGNEE_NOT_FOUND("The task does not have an assigned user.", NOT_FOUND),
-    TASK_MODIFICATION_FORBIDDEN("You do not have permission to modify this task.", FORBIDDEN),
+    FORBIDDEN_ACCESS("Access is denied. You do not have sufficient privileges to access this resource.", FORBIDDEN),
     INVALID_INPUT("The provided data is invalid and does not meet the required criteria.", BAD_REQUEST),
+    TASK_MODIFICATION_FORBIDDEN("You do not have permission to modify this task.", FORBIDDEN),
     USER_NOT_FOUND_DURING_AUTHENTICATION("Authentication failed: User not found with email: %s.", NOT_FOUND),
-    UNAUTHORIZED("Access is denied. Authorization is required.", HttpStatus.UNAUTHORIZED),
-    BAD_CREDENTIALS("Authentication failed. Please check your credentials.", HttpStatus.UNAUTHORIZED);
+    UNAUTHORIZED("Access is denied. Authorization is required.", HttpStatus.UNAUTHORIZED);
 
     private final String description;
     private final HttpStatus status;
